Merge branch 'master' of https://github.com/UniversalMediaServer/UniversalMediaServer into viera
# Conflicts:
#	src/main/java/net/pms/configuration/RendererConfiguration.java
#	src/main/java/net/pms/dlna/DLNAResource.java
#	src/main/java/net/pms/network/ChromecastMgr.java
#	src/main/java/net/pms/network/HTTPXMLHelper.java
#	src/main/java/net/pms/network/UPNPControl.java
#	src/main/java/net/pms/util/BasicPlayer.java